

0.1.10:
  - useMemo (to skip expensive function when not needed)
  - useMemo (for object/function prop equality)
  - useCallback
  - memo



0.1.9:
  - portals


0.1.8:
  - refs


0.1.7:
  - custom hooks


0.1.6:
  - improved setX calls, passing function rather than object, for more
    reliability when working with previous value
    (previousVal => previousVal + 1)


0.1.5:
  - useReducer (passing as props)
  - useReducer (local state)


0.1.4:
  - useContext


0.1.3:
  - useEffect and its note cleaned up a bit


0.1.2:
  - useEffect triggering twice should not happen in production,
    it's only to catch errors (like leaks, etc) in dev mode.
  - why useEffect triggers twice (dev, strictmode, mount->unmount->mount process)
  - useEffect


0.1.1:
  - children outside jsx
  - default props, prop types
  - state and children
  - stateful component
  - simple component


0.1.0:
  - folder cleanup
  - init